conf/webstatic/lighttpd-deployment-raspi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: lighttpd
  labels:
    app: lighttpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lighttpd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lighttpd
        version: v1.22.0
    spec:
      # nodeSelector:
      #   kubernetes.io/arch: arm
      containers:
        - name: lighttpd
          image: dpcrook/alpine-lighttpd-static:0.1.22-arm64v8
          imagePullPolicy: Always
          #resources:
          #  requests:
          #    cpu: 100m
          #    memory: 50Mi
          #  limits:
          #    cpu: 100m
          #    memory: 50Mi
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /var/www/htdocs/
              name: lighttpd-persistent-storage
      restartPolicy: Always
      volumes:
        - name: lighttpd-persistent-storage
          persistentVolumeClaim:
            claimName: lighttpd-persistent-claim
