conf/webstatic/lighttpd-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lighttpd
  name: lighttpd
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: lighttpd
    task: server
