conf/webstatic/lighttpd-ingress-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-lighttpd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      # .dev domains are now pre-loaded HSTS in most browsers so no redirect is done
      ##match: Host(`crookster.org`, `www.crookster.org`) || Host(`idcrook.com`, `www.idcrook.com`)
      match: Host(`crookster.org`) || Host(`www.crookster.org`)
      services:
        - name: lighttpd
          port: 80
      middlewares:
        - name: redirect-to-https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-lighttpd

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`crookster.org`) || Host(`www.crookster.org`)
      services:
        - name: lighttpd
          port: 80
      # middlewares:
      #   - name: my-fail2ban
  tls:
    certResolver: myresolver

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-dev-lighttpd

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      # match: HostRegexp(`idcrook.dev`, `{subdomain:[-a-z0-9]+}\.idcrook\.dev`)
      match: Host(`idcrook.dev`) || Host(`www.idcrook.dev`)
      services:
        - name: lighttpd
          port: 80
      # middlewares:
      #   - name: my-fail2ban
  tls:
    certResolver: wildcardresolver
    domains:
      - main: idcrook.dev
        sans:
          -  "*.idcrook.dev"
      - main: internal.idcrook.dev
        sans:
          -  "*.internal.idcrook.dev"          

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: idcrook-dev-wildcard-fallback-router
  namespace: default
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    # - match: "HostRegexp(`{subdomain:[a-z0-9-]+}\\.idcrook\\.dev`)"
    - match: Host(`*.idcrook.dev`) 
      kind: Rule
      priority: 1
      services: # dummy service to satisfy the requirement of at least one service
        - name: lighttpd
          port: 80
      # observability:
      #   accessLogs: true
      #   # metrics: true
      #   tracing: true          
      #   traceVerbosity: detailed
      middlewares:
        - name: idcrook-dev-wildcard-fallback-redirect
        # - name: redirect-to-https

  tls:
    certResolver: wildcardresolver
